# pyecod_mini

./: .gitignore  ALGORITHM_VALIDATION.md  CHANGELOG.md  CHANGELOG_v2.0.1.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PRODUCTION_DESIGN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  coverage.yml  pr-checks.yml  tests.yml
config/: config.template.yml
data/: architecture_rules.json  test_config.py
docs/: step1_complete.md  step2_complete.md  step3_complete.md  step4_complete.md
docs/archive/: EXTRACTION_PLAN.md  NEXT_STEPS.md
src/pyecod_mini/: __init__.py  __main__.py  api.py
src/pyecod_mini/cli/: __init__.py  config.py  main.py  partition.py  utils.py
src/pyecod_mini/core/: __init__.py  blast_parser.py  boundary_optimizer.py  decomposer.py  domain_utils.py  ecod_domains_parser.py  evidence_utils.py  gap_analyzer.py  models.py  parser.py  partitioner.py  range_cache_parser.py  sequence_range.py  visualization.py  writer.py
src/pyecod_mini/production/: __init__.py
test_data/: domain_definitions.csv  domain_lengths.csv  ecod_classifications.csv  protein_lengths.csv  reference_blacklist.csv
tests/: __init__.py  conftest.py  test_api.py  test_batch_finder.py  test_batch_proteins.py  test_blast_parser.py  test_cases.py  test_cli.py  test_core.py  test_decomposer.py  test_discontinuous.py  test_ecod_regression.py  test_ecod_tgroup.py  test_models.py  test_parser.py  test_provenance.py  test_range_cache_parser.py  test_standalone_regression.py  test_version.py  test_writer.py
